# SimpleGLTF

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  camera.c  camera.h  core.c  core.h  main.c  model.c  model.h  xmath.c  xmath.h
assets/: def_fs.glsl  def_vs.glsl  uwu.blend  uwu.blend1  uwu.gltf
xmath/: CMakeLists.txt  mat4.c  mat4.h  scalar.c  scalar.h  transform.c  transform.h  vec2.c  vec2.h  vec3.c  vec3.h  vec4.c  vec4.h
